Implementación de el atributo imagen de los hoteles
